# zeyutiann.github.io

./: .gitignore  conf.py  index.html  index.rst  pyproject.toml  readme.md
.doctrees/: about.doctree  environment.pickle  first-post.doctree  index.doctree  readme.doctree
.doctrees/blog/: about.doctree  first-post.doctree  index.doctree
_includes/: thoughts.html
_posts/2022-09/: 2022-09-26-python-project.md
_posts/2022-10/: 2022-10-02-pytest.md
_sass/: _highlight-syntax.scss
_website/: .buildinfo  blog.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
_website/.doctrees/: environment.pickle  index.doctree
_website/_sources/: index.rst.txt  readme.rst.txt
_website/about/: index.html
_website/blog/: 2022.html  about.html  archive.html  atom.xml  author.html  category.html  drafts.html  index.html  tag.html
_website/blog/tag/: git.html  (+16 more)
_website/first-post/: index.html
_website/genindex/: index.html
_website/readme/: index.html
_website/search/: index.html
assets/: styles.scss
blog/: about.rst  first-post.rst
blog/2022-09/: 2022-09-25-programming-keywords-wiki.rst  2022-09-26-python-project.md  2022-09-28-git-cheatsheet.md  2022-09-29-sphinx-document-a-project.rst  2022-09-30-githubpage-tutorial.rst
blog/2022-10/: 2022-10-01-githubpage-tutorial.rst  2022-10-23-recursive-functions.rst  2022-10-25-design-pattern-builder.rst
blog/2022-11/: 2022-11-02-keyword-only-position-only-arg.rst  2022-11-06-framework-vs-library.rst  2022-11-07-design-pattern-configuration.rst
tag/: PEP8.md  Poetry.md  Sphinx.md  unittest.md
(+64 files in other folders)
